[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bounce-ball"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "dh031200", email = "imbird0312@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "opencv-python",
]

[project.urls]
Documentation = "https://github.com/dh031200/bounce-ball#readme"
Issues = "https://github.com/dh031200/bounce-ball/issues"
Source = "https://github.com/dh031200/bounce-ball"

[project.scripts]
bounce-ball = "bounce_ball.cli:bounce_ball"

[tool.hatch.version]
path = "src/bounce_ball/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bounce_ball tests}"

[tool.coverage.run]
source_pkgs = ["bounce_ball", "tests"]
branch = true
parallel = true
omit = [
  "src/bounce_ball/__about__.py",
]

[tool.coverage.paths]
bounce_ball = ["src/bounce_ball", "*/bounce-ball/src/bounce_ball"]
tests = ["tests", "*/bounce-ball/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
